Fix all problems with 8.5.0 website

--- a/org.jrebirth.af/src/site/apt/links.apt.vm
+++ b/org.jrebirth.af/src/site/apt/links.apt.vm
@@ -25,7 +25,7 @@ Useful links
 
 * Javadoc
 
-	* Latest stable version (all modules mixed): {{{http://api.jrebirth.org} stable-api.jrebirth.org}}
+	* Latest stable version (all modules mixed): {{{http://api.jrebirth.org} api.jrebirth.org}}
 
 	* Latest development version (all modules mixed): {{{http://wip-api.jrebirth.org} wip-api.jrebirth.org}}
 
