--- a/org.jrebirth.af/archetype/src/main/resources/archetype-resources/src/main/jnlp/template.vm
+++ b/org.jrebirth.af/archetype/src/main/resources/archetype-resources/src/main/jnlp/template.vm
@@ -3,47 +3,48 @@
 
 	<information>
 #if($project.Name)
-		<title>$project.Name</title>
+    <title>$project.Name</title>
 #end
 #if($project.Organization.Name)
-		<vendor>$project.Organization.Name</vendor>
+    <vendor>$project.Organization.Name</vendor>
 #end
 #if($project.Url)
-		<homepage href="$project.Url"/>
+    <homepage href="$project.Url"/>
 #end
 #if($project.Description)
-		<description>$project.Description</description>
+    <description>$project.Description</description>
 #end
-		<description kind="short">Sample Application</description>
-		<icon href="http://www.jrebirth.org/uploads/images/JRebirth_32x32.png"/>
+<!--
+	<description kind="short"></description>-->
+	<!--<icon href="icon.png"/>
+-->
 #if($offlineAllowed)
-		<offline-allowed/>
+    <offline-allowed/>
 #end
 	</information>
 
-	
 #if($allPermissions)
-	<security>
-		<all-permissions/>
-	</security>
+  <security>
+     <all-permissions/>
+  </security>
 #end
-
+<!--
 	<resources os="Windows" arch="x86">
 		<jfx:javafx-runtime version="2.0+" href="http://download.oracle.com/otn-pub/java/javafx/javafx-windows-i586__Vlatest.exe "/>
 	</resources>
 	<resources os="Windows" arch="x64">
 		<jfx:javafx-runtime version="2.0+" href="http://download.oracle.com/otn-pub/java/javafx/javafx-windows-x64__Vlatest.exe "/>
 	</resources>
-
-	<resources>
-		<j2se version="1.7+" />
+-->	
+  	<resources>
+		<j2se version="1.8+" href="http://java.sun.com/products/autodl/j2se"/>
 		$dependencies
 	</resources>
 	
 	<application-desc main-class="$mainClass"/>
 	
 	<applet-desc  width="$appletWidth" height="$appletHeight" main-class="com.javafx.main.NoJavaFXFallback"  name="${project.name}" />
-	<jfx:javafx-desc  width="$appletWidth" height="$appletHeight" main-class="$mainClass" name="${project.name}" />
+	<jfx:javafx-desc  width="$appletWidth" height="$appletHeight" preloader-class="$preloaderClass" main-class="$mainClass" name="${project.name}" />
 <!--
 
 	update element: The update element is used to indicate the preferences for how application updates should be handled by the JNLP Client. The update element can contain the following two optional attributes:
