Improve Wave demo

--- a/org.jrebirth.af/showcase/wave/src/main/java/org/jrebirth/af/showcase/wave/ui/main/Main.fxml
+++ b/org.jrebirth.af/showcase/wave/src/main/java/org/jrebirth/af/showcase/wave/ui/main/Main.fxml
@@ -6,7 +6,7 @@
 
 <AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.112" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.jrebirth.af.showcase.wave.ui.main.MainController">
 	<children>
-		<Button layoutX="113.0" layoutY="106.0" mnemonicParsing="false" onAction="#onOk" text="Button" />
+		<Button layoutX="113.0" layoutY="106.0" mnemonicParsing="false" onAction="#onOk" text="OPen Dialog" />
 		<TextField fx:id="txtMessage" layoutX="52.0" layoutY="178.0" />
 	</children>
 </AnchorPane>
