Repair Style and font usage for sample application

--- a/org.jrebirth.af/sample/src/main/resources/styles/sample.css
+++ b/org.jrebirth.af/sample/src/main/resources/styles/sample.css
@@ -1,5 +1,5 @@
-#SampleNode{
+Sample{
 	
-	-fx-background-color: #FFCCFF;  
-    -fx-fill : #A0DCFF ;
+	-fx-background-color: #49E3FF;  
+    -fx-fill : #000000 ;
 }
